[package]
version = "0.1.3"
name = "bcat"
authors = ["bootjp / Yoshiaki Ueda <contact@bootjp.me>"]
edition = "2018"
license = "Apache-2.0"
description = "A command-line tool that allows transparent ls and cat operations regardless of whether they are files or directories."
repository = "https://github.com/bootjp/bcat"
documentation = "https://github.com/bootjp/bcat/blob/main/README.md"
readme = "README.md"
exclude = [
    ".github/*",
    ".doc/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
command = "0.0.0"
env_logger = "0.8.3"
filesize = "0.2.0"
filetime = "0.2.14"
fs = "0.0.5"
humansize = "1.1.0"
io = "0.0.2"
libc = "0.2.94"
pretty-bytes = "0.2.2"
result = "1.0.0"
structopt = "0.3.21"
unix_mode = "0.1.1"
use = "0.0.0"
cfg-if = "1.0.0"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[target.'cfg(not(target_os = "wasi"))'.dependencies.prettytable-rs]
version = "0.8.0"

[target.'cfg(target_os = "wasi")'.dependencies.prettytable-rs-wasi]
package = "prettytable-rs"
git = "https://github.com/jcaesar/prettytable-rs.git"
rev = "33e2f4cdc080cb0dfacf67ce7636a0921265c179"
